Relecture partie2, partie 3 en cours Reecriture conclusion

--- a/latex/conclusion.tex
+++ b/latex/conclusion.tex
@@ -1,13 +1,12 @@
 Le projet visait à supprimer la dépendance de IzPack à NanoXML.
-Cet objectif à été réalisé, la librairie NanoXML a été entièrement supprimé du projet.
-Ces changements ont été placé sur la branche principale et seront disponible pour la 4.3 de IzPack, qui sortira le 24 avril.
+Cet objectif à été atteint grâce à un adaptateur créé afin d'assurer la transition.
+La librairie NanoXML a été entièrement supprimé du projet grâce à cet adaptateur.
+Ces changements ont été placé sur la branche principale et seront disponible pour la 4.3 de IzPack, qui sortira le 21 avril.
 
+La principale difficulté de ce projet était de rester synchronisé, étant donné que nos modifications était isolé sur un fork jusqu'à ce qu'elles atteignent un niveau de maturié suffisante.
+Rien n'empéchait les développeurs d'utilisaient NanoXML pour leurs besoins, il fallait donc régulièrement adapté les nouveaux changements avec notre adaptateur.
 
-Les tests assurent la fiabilité de la solution mais des bugs peuvent subsister.
-C'est pour ça que nous continuons de suivre nos réalisations hors du cadre du projet en devenant contributeur.
+Les tests réalisés assurent la fiabilité de la solution mais des bugs peuvent subsister.
+C'est pour ça que nous continuons de suivre nos réalisations hors du cadre du projet en étant contributeur.
 De plus, nous participons désormais activement à l'évolution du projet.
-
-Il reste encore de nombreuse possibilités d'amélioration pour IzPack.
-La suppression de NanoXML en faisait partie.
-Nous travaillons actuellement sur d'autres améliorations pour améliorer la qualité de IzPack.
-En effet, il est préférable pour les nouveaux contributeurs de faire des petites modifications afin de b
+Il reste encore de nombreuse possibilités d'amélioration pour IzPack et nous travaillons actuellement sur ces améliorations.
