--- a/latex/conclusion.tex
+++ b/latex/conclusion.tex
@@ -1,12 +1,12 @@
-Le projet visait à supprimer la dépendance de IzPack à NanoXML.
+Le projet visait à supprimer la dépendance de IzPack envers NanoXML.
 Cet objectif à été atteint grâce à un adaptateur créé afin d'assurer la transition.
-La librairie NanoXML a été entièrement supprimé du projet grâce à cet adaptateur.
-Ces changements ont été placé sur la branche principale et seront disponible pour la 4.3 de IzPack, qui sortira le 21 avril.
+La librairie NanoXML a été entièrement supprimée du projet grâce à cet adaptateur.
+Ces changements ont été placés sur la branche principale et seront disponibles pour la version 4.3 de IzPack, qui sortira le 21 avril.
 
-La principale difficulté de ce projet était de rester synchronisé, étant donné que nos modifications était isolé sur un fork jusqu'à ce qu'elles atteignent un niveau de maturié suffisante.
-Rien n'empéchait les développeurs d'utilisaient NanoXML pour leurs besoins, il fallait donc régulièrement adapté les nouveaux changements avec notre adaptateur.
+La principale difficulté de ce projet était de rester synchronisés, étant donné que nos modifications étaient isolées sur un fork jusqu'à ce qu'elles atteignent un niveau de maturité suffisant.
+Rien n'empêchait les développeurs d'utiliser NanoXML pour leurs besoins, il fallait donc régulièrement adapter les nouveaux changements avec notre adaptateur.
 
 Les tests réalisés assurent la fiabilité de la solution mais des bugs peuvent subsister.
-C'est pour ça que nous continuons de suivre nos réalisations hors du cadre du projet en étant contributeur.
+C'est pour cela que nous continuons de suivre nos réalisations hors du cadre du projet en étant contributeurs.
 De plus, nous participons désormais activement à l'évolution du projet.
-Il reste encore de nombreuse possibilités d'amélioration pour IzPack et nous travaillons actuellement sur ces améliorations.
+Il reste encore de nombreuse possibilités d'évolution pour IzPack et nous travaillons actuellement dessus.
