--- a/latex/glossaire.tex
+++ b/latex/glossaire.tex
@@ -1,9 +1,9 @@
 \begin{description}
 	\item[Packager] Packager est l'action de regrouper en un seul point plusieurs ressources.
 	\item[Parser] Parser est l'action de lire un fichier contenant des informations structurées pour les charger en mémoire.
-	\item[Refactoring] C'est une modification du code avec pour but de le rendre plus lisible, maintenable, testable. Il n'ajoute pas de fonctionnalités.
+	\item[Refactoring] C'est une modification du code ayant pour but de le rendre plus lisible, maintenable, testable. Il n'ajoute pas de fonctionnalité.
 	\item[Design pattern] Patron de conception.
-	\item[XML] eXtensible Markup Language. C'est un langage descriptif, qui permet de decrire pratiquement tout. Il est beaucoup utilise dans IzPack.
-	\item[Fork] Dans GitHub, un fork permet de creer un nouveau depot attache a son compte, dupliquant un autre depot heberge par GitHub.
-	\item[W3C] World Wide Web Consortium. C'est le groupe a l'origine de la specification du XML.
+	\item[XML] eXtensible Markup Language. C'est un langage descriptif, qui permet de décrire pratiquement tout. Il est beaucoup utilisé dans IzPack.
+	\item[Fork] Dans GitHub, un fork permet de créer un nouveau dépôt attaché à son compte, dupliquant un autre dépôt hebergé par GitHub.
+	\item[W3C] World Wide Web Consortium. C'est le groupe à l'origine de la specification du XML.
 \end{description}
