--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -393,7 +393,7 @@ Notre adaptateur pèse 44Ko.
 Chaque installateur généré par IzPack perdra donc 72Ko.
 Ce chiffre peut paraître faible mais si l'installateur est téléchargé 25000 fois sur le site officiel, presque 1800 Mo de bande passante sont économisés.
 \subsection{Support de fonctionnalités XML}
-Outre le fait d'avoir un analyseur plus fiable et récent, un certain nombre de nouveautés ont été apportées.
+Outre le fait d'avoir un analyseur plus fiable et récent, un certain nombre de nouveautés a été apportée.
 \subsubsection{Support de la DTD}
 Désormais les DTD (document de validation d'un XML) sont pris en charge.
 \subsubsection{Support natif de Xinclude}
@@ -409,13 +409,13 @@ Après quoi, les modifications ont été portées sur la branche principale et s
 % -------------------------------------------------------------------------
 \section{Au delà du sujet}
 Une fois l'objectif du projet atteint, nous avons décidé d'accepter l'offre de Julien Ponge en devenant contributeurs officiels du projet.
-Grâce à ce titre, nous bénéficions d'accés privilégiés pour le projet, notament un accés développeur sur le dépôt subversion et un compte sur Codehaus.
+Grâce à ce titre, nous bénéficions d'accès privilégiés pour le projet, notament un accès développeur sur le dépôt subversion et un compte sur Codehaus.
 \subsection{Suivi de nos apports}
 Notre solution étant intégrée, il est possible que des bugs subsistent dans notre implémentation ou qu'une mauvaise interprétation de notre part mène à un comportement inattendu.
-Le statut de développeur nous permet de suivre et corriger les problèmes rencontrés par la communauté de IzPack.
+Le statut de développeur nous permet de suivre et de corriger les problèmes rencontrés par la communauté IzPack.
 \subsubsection{Système de suivi de bugs, Jira}
 L'évolution du projet peut être suivie via Jira.
-Les anomalies, lacunes et améliorations possibles font l'objet d'un ticket.
+Les anomalies, lacunes et améliorations possibles font chacunes l'objet d'un ticket.
 Jira permet alors de suivre et de modifier les tickets avec un workflow similaire à LightHouse.
 \begin{figure}[H]
 	\centering
@@ -446,13 +446,13 @@ Les modules additionnels seront alors téléchargés s'ils sont sélectionnés.
 
 Cette fonctionnalité présentait des lacunes dans la documentation et n'était pas fonctionnelle.
 De plus, un refactoring des classes concernés est en cours de traitement.
-\subsubsection{UserInputPanels}
-Le panel UserInputPanels doit permettre de décider de l'alignement des éléments.
+\subsubsection{UserInputPanel}
+Le panel UserInputPanel doit permettre de décider de l'alignement des éléments.
 C'est a dire qu'il est possible de les placer à gauche, à droite ou au centre. Actuellement, tout les éléments sont alignés à gauche.
 Le travail est en cours de réalisation mais les modifications entrent en concurrence avec le refactoring de Dennis Reil, un autre contributeur.
 
 \subsection{Améliorations}
-Outre les corrections de bugs, la qualité du code a été également amélioré.
-Par exemple, le code de l'installateur automatique a été refactoré avec d'autres classes, rendant le code plus lisible et améliorant sa qualité.
+Outre les corrections de bugs, la qualité du code a été également améliorée.
+Par exemple, le code de l'installateur automatique a été refactoré avec d'autres classes, le rendant plus lisible et améliorant sa qualité.
 
 De même, certaines méthodes inutilisées (prévues pour des vieilles versions de Java) ont pu être supprimées.
