beginning of presentation

--- a/beamer/beamer.tex
+++ b/beamer/beamer.tex
@@ -51,7 +51,7 @@
 
 \setbeamerfont{block title}{size={}}
 
-\logo{\includegraphics[height=1.1cm]{../image/gwtLogoAlpha.png}}
+\logo{\includegraphics[height=1.1cm]{../image/izpackLogoAlpha.png}}
 
 \defbeamertemplate*{footline}{infolines theme}
 {
