--- a/beamer/titlepage.tex
+++ b/beamer/titlepage.tex
@@ -8,9 +8,7 @@
 { \Huge \bfseries Refactoring IzPack}\\[0.4cm]
 \hrule
 ~\\[0.4cm]
-\includegraphics[height=1.1cm]{../image/logo_GWT_1.jpg}
-\hfil
-\includegraphics[height=1.1cm]{../image/logo_RT.jpg}
+\includegraphics[height=1.5cm]{../image/izpack-logo-big.png}
 \\[0.4cm]
 \Large Filière : Génie Logiciel et Systèmes Informatiques\\
 \Large Anthonin Bonnefoy et David Duponchel
