Changements brain and partie 1

--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -2,8 +2,15 @@
 \begin{frame}\frametitle{Principe du framework}
 \end{frame}
 %------------------------------------------------------------------------------
-\subsection{Les avantages}
-\begin{frame}\frametitle{Les avantages}
+\subsection{Problèmes}
+\begin{frame}\frametitle{Problèmes}
+\begin{box}{NanoXML obsolète}
+\begin{itemize}
+ \item 
+\end{itemize}
+
+\end{box}
+
 \end{frame}
 %------------------------------------------------------------------------------
  \begin{frame}\frametitle{Les avantages}
