--- a/beamer/beamer.tex
+++ b/beamer/beamer.tex
@@ -14,11 +14,21 @@
 % \usecolortheme{seahorse}
 % \usecolortheme{orchid}
 
-\usecolortheme{crane}
+\usecolortheme{seagull}
 
-\setbeamercolor{structure}{fg=black} % tout ce qui structure le doc : titres, sous titres, TOC, ...
+% \definecolor{craneorange}{RGB}{252,187,6}
+% \definecolor{craneblue}{RGB}{4,6,76}
+% 
+% \setbeamercolor{block title}{fg=craneblue,bg=craneorange}
+% \setbeamercolor{block title alerted}{use=alerted text,fg=craneblue,bg=alerted text.fg!75!bg}
+% \setbeamercolor{block title example}{use=example text,fg=craneblue,bg=example text.fg!75!bg}
+% 
+% \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!25!bg}
+% \setbeamercolor{block body alerted}{parent=normal text,use=block title alerted,bg=block title alerted.bg!25!bg}
+% \setbeamercolor{block body example}{parent=normal text,use=block title example,bg=block title example.bg!25!bg}
 
-\setbeamercolor{itemize item}{fg=red}
+% \setbeamercolor{structure}{fg=black} % tout ce qui structure le doc : titres, sous titres, TOC, ...
+
 \setbeamerfont{block title}{size={}}
 
 \logo{\includegraphics[height=0.8cm]{../image/izpack-logo-big.png}}
